--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,62 @@
 /*  your css code here. If applicable */
+* {
+  box-sizing: border-box;
+}
+
+body {
+  background-color: #f4f4f4;
+  font-family: Arial, Helvetica, sans-serif;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  margin: 0;
+}
+
+.container {
+  background: #fff;
+  border: 2px solid #000;
+  padding: 40px;
+  max-width: 600px;
+  text-align: center;
+  border-radius: 10px;
+}
+
+#verification_heading {
+  margin-bottom: 10px;
+}
+
+#verification_subtext {
+  margin-bottom: 30px;
+  color: #555;
+}
+
+.code-container {
+  display: flex;
+  justify-content: center;
+align-items:centre;
+  gap: 10px;
+}
+
+.code {
+  width: 60px;
+  height: 80px;
+  font-size: 40px;
+  text-align: center;
+  border: 1px solid #ddd;
+  border-radius: 6px;
+}
+
+.code:focus {
+  border-color: #000;
+  outline: none;
+}
+
+.info {
+  display: block;
+  margin-top: 30px;
+  background: #eee;
+  padding: 15px;
+  color: #777;
+  border-radius: 5px;
+}
